syntax = "proto3";

package tech.monstrs.chats_system.gateway.v1alpha1;

service GatewayService {
  rpc sendData (SendDataRequest) returns (SendDataResponse) {}
}

message SendDataRequest {
  int64 auth_key_id = 1;
  int64 session_id = 2;
  bytes payload = 3;
}

message SendDataResponse {}